# AI-Micro-Major-Project

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_powerinsight.bat
app/: __init__.py  streamlit_app.py  theme.py
app/assets/: README.md
app/components/: __init__.py  layout.py  planned.py
app/pages/: __init__.py  alerts.py  analytics.py  data_center.py  forecasting.py  home.py  optimization.py  reports.py  settings.py
artifacts/: README.md
artifacts/demo/: README.md
artifacts/exports/: README.md
artifacts/figures/: README.md
artifacts/forecasts/: README.md
artifacts/reports/: README.md
configs/: default.yaml  demo.yaml
configs/model/: patchtst_small.yaml
data/interim/: README.md
data/manifests/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: 实验6——家庭用电数据集的探索.md
docs/project/: 01-project-charter.md  02-requirements-specification.md  03-feature-and-ui-specification.md  04-system-architecture.md  05-data-specification.md  06-model-and-intelligence-design.md  07-interface-and-storage-contracts.md  08-technology-and-environment.md  09-development-standards.md  10-test-and-acceptance.md  11-deployment-operations-demo.md  12-plan-risk-and-collaboration.md  13-course-report-and-ai-disclosure.md  13-course-report.md  14-glossary-decisions-and-open-items.md  README.md  (+2 more)
logs/: README.md
scripts/: accept_m3.py  accept_m4.py  check_environment.py  init_db.py  prepare_data.py  start_powerinsight.ps1  train_m4.py  validate_data.py
tests/: __init__.py
(+95 files in other folders)
