[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powerinsight"
version = "0.1.0"
description = "PowerInsight electric power data analysis and visualization system"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  "joblib==1.5.3",
  "numpy==2.4.6",
  "openai==2.46.0",
  "pandas==3.0.3",
  "plotly==6.9.0",
  "pyarrow==24.0.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pyyaml==6.0.3",
  "scikit-learn==1.9.0",
  "scipy==1.17.1",
  "streamlit==1.59.2",
  "torch==2.13.0+cu130",
  "transformers==5.14.1",
]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
  "types-pyyaml==6.0.12.20260518",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
environments = ["sys_platform == 'win32'"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "app", "scripts", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
